# imFucked

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
imClient/: CMakeLists.txt
imClient/assets/shaders/: 2DShader.fragment.glsl  2DShader.vertex.glsl
imClient/src/: Debug.h  EditorGUI.cpp  EditorGUI.h  GLCommands.cpp  GLCommands.h  GlobalValues.h  IMF_PCH.cpp  IMF_PCH.h  Main.cpp  Setup.cpp  Setup.h
imClient/src/Game/: Game.cpp  Game.h  GameContext.h  ImGuiLayer.h
imClient/src/GameEngine/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameContext.h  ImGuiLayer.cpp  ImGuiLayer.h
imClient/src/Renderer/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  GLCommands.cpp  GLCommands.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
imServer/: CMakeLists.txt
imServer/src/: Main.cpp
imShared/: CMakeLists.txt
imShared/src/: IMFAssert.h  Main.cpp
imShared/src/Logger/: LogTypes.h  Logger.h
imShared/src/Memory/: Pointer.h
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
